Rimozione caratteri incompatibili